End of Section 3

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "This is a SecretCode"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DatingApp.db"
   },
